Fix some layout issues

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -38,6 +38,10 @@ h1, h2 {
   100%  { opacity: 1.0; }
 }
 
+p {
+  word-wrap: break-word;
+}
+
 a {
   color: $neon-blue-core;
   text-shadow: 0 0 5px $neon-blue, 0 0 1em $neon-blue;
@@ -117,7 +121,8 @@ a {
 }
 
 .home-link {
-  margin-top: 0.4em;
+  margin-top: .4em;
+  margin-bottom: .6em;
   display: block;
 }
 
